--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "outDir": "built",
         "rootDir": "src",
         "sourceMap": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "allowJs": true,
         "allowSyntheticDefaultImports": true
     },
