--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-native": "0.31.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-actions": "^0.12.0",
     "redux-saga": "^0.11.1"
   },
   "devDependencies": {
